plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-plex-media-server-ingress
  labels:
    name: plex-plex-media-server-ingress
    app: plex-media-server
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.crt.house
    external-dns.alpha.kubernetes.io/target: crt.house
    nginx.org/websocket-services: plex-plex-media-server
spec:
  ingressClassName: crt-house-external
  rules:
  - host: plex.crt.house
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: plex-plex-media-server
            port:
              number: 32400
  tls:
  - hosts:
    - plex.crt.house
