plex/plex.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: plex-media-server-0.1.7
  name: plex-plex-media-server
  namespace: plex
spec:
  ports:
  - name: pms
    port: 32400
    protocol: TCP
    targetPort: 32400
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: plex-media-server-0.1.7
    name: plex-plex-media-server
  name: plex-plex-media-server
  namespace: plex
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: plex
      app.kubernetes.io/name: plex-media-server
  serviceName: plex-plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
        app.kubernetes.io/instance: plex
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: plex-media-server
        app.kubernetes.io/version: 1.16.0
        helm.sh/chart: plex-media-server-0.1.7
    spec:
      hostNetwork: true
      affinity: {}
      containers:
      - env:
        - name: ALLOWED_NETWORKS
          value: 0.0.0.0/0.0.0.0
        - name: PLEX_CLAIM
          value: CLAIMGOESHERE
        - name: TZ
          value: America/Detroit
        image: index.docker.io/plexinc/pms-docker:1.32.8.7639-fb6452ebf
        imagePullPolicy: IfNotPresent
        name: plex-plex-media-server-pms
        ports:
        - containerPort: 32400
          name: pms
        volumeMounts:
        - mountPath: /config
          name: pms-config
        - mountPath: /transcode
          name: pms-transcode
        - mountPath: /media
          name: media
        - mountPath: /critical_media
          name: critical-media
      initContainers: null
      nodeSelector: {}
      serviceAccountName: plex-plex-media-server
      terminationGracePeriodSeconds: 120
      tolerations: []
      volumes:
      - emptyDir: {}
        name: pms-transcode
      - name: media
        nfs:
          path: /volume1/media
          readOnly: true
          server: nas01.crt.house
      - name: critical-media
        nfs:
          path: /volume1/critical/media
          readOnly: true
          server: nas01.crt.house
  volumeClaimTemplates:
  - metadata:
      name: pms-config
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: longhorn
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.crt.house
    external-dns.alpha.kubernetes.io/target: crt.house
  labels:
    app: plex-media-server
    name: plex-plex-media-server-ingress
  name: plex-plex-media-server-ingress
  namespace: plex
spec:
  ingressClassName: crt-house-external
  rules:
  - host: plex.crt.house
    http:
      paths:
      - backend:
          service:
            name: plex-plex-media-server
            port:
              number: 32400
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plex.crt.house
